--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body class="bg-light text-gray-900 dark:bg-gray-950 dark:text-white">
+<body class="bg-zinc-50 text-gray-900 dark:bg-zinc-800 dark:text-white">
   <app-root></app-root>
 </body>
 </html>
